Fix TE axtion list wrapping

--- a/src/ggrc-client/styles/components/tree/_tree-view.scss
+++ b/src/ggrc-client/styles/components/tree/_tree-view.scss
@@ -68,6 +68,7 @@ tree-widget-container {
       a, span {
         font-size: 13px;
         color: $black;
+        white-space: nowrap;
       }
     }
   }
